clusters/templates/network/ingress-default.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-type-default
spec:
  priority: 51
  subject:
    namespaces:
      matchLabels:
        gitops.ticq.dev/ingress-type: "default"
  ingress: 
  - name: "allow-from-openshift-ingress" 
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          network.openshift.io/policy-group: ingress
