clusters/templates/network/ingress-istio.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-type-istio
spec:
  priority: 49
  subject:
    namespaces:
      matchLabels:
        gitops.ticq.dev/ingress-type: "istio"

  ingress:
  - name: "allow-from-istio-ingress" 
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: istio-ingress

  egress:
  # allow istio for certs for sidecars
  - name: "allow-istio-system"
    action: "Allow"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: istio-system

  - name: "allow-istio-egress"
    action: "Allow"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: istio-egress
