clusters/templates/network/tenant-policies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: tenant-policies
spec:
  priority: 50
  subject:
    namespaces:
      matchLabels:
        gitops.ticq.dev/type: "tenant"

  ingress: 

  # openshift components
  - name: "allow-ingress-from-monitoring"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          network.openshift.io/policy-group: monitoring

  egress:

  # egress is closed!
  - name: "allow-dns-resolution"
    action: "Allow"
    to:
    - namespaces:
        # TODO: make more specific with DNS ports
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns

  # networks (oc get networks.config.openshift.io cluster -o yaml)
  # - name: "deny-cluster-network"
  #   action: "Deny"
  #   to:
  #   - networks:
  #     - 10.128.0.0/14 # pods 
  #     - 172.30.0.0/16 # services
      
  - name: "allow-other-internet"
    action: "Allow"
    to:
    - networks:
      - 0.0.0.0/0
